tests/ui/ast_unary_operation.stderr
error[E0382]: use of moved value: `term`
 --> $DIR/ast_unary_operation.rs:7:10
  |
5 |     let term = ast::Term::from(sym);
  |         ---- move occurs because `term` has type `clingo::ast::Term<'_>`, which does not implement the `Copy` trait
6 |     let op = ast::UnaryOperation::minus(term);
  |                                         ---- value moved here
7 |     drop(term);
  |          ^^^^ value used here after move

For more information about this error, try `rustc --explain E0382`.
